--- a/plots-ggplot.Rmd
+++ b/plots-ggplot.Rmd
@@ -4,3 +4,16 @@ author: "Benjamin Cassidy"
 date: "1/27/2020"
 output: html_document
 ---
+
+# Plotes with ggplot2
+
+We are going to make plots in R using the ggplot2 package from the tidyverse.
+
+
+
+
+
+
+
+
+
