Added some documentation about the packages and the install code for tidy, readxl, and here

--- a/plots-ggplot.Rmd
+++ b/plots-ggplot.Rmd
@@ -5,11 +5,26 @@ date: "1/27/2020"
 output: html_document
 ---
 
-# Plotes with ggplot2
+## Plots with ggplot2
 
 We are going to make plots in R using the ggplot2 package from the tidyverse.
 
 
+## Methods:
+We will install these **packages**
+
+ - **tidyverse** : suite of packages for wrangling and viz with ggplot
+ - **readxl** : to read in Excels into R
+ - **here** : to help with filepath syntax
+
+```{r setup, message=FALSE}
+library(tidyverse) # install.packages("tidyverse")
+library(readxl) # install.packages("readxl")
+library(here) # install.packages("here")
+
+
+
+```
 
 
 
