--- a/plots-ggplot.Rmd
+++ b/plots-ggplot.Rmd
@@ -26,7 +26,7 @@ library(here) # install.packages("here")
 ```
 
 ## Data:
-Here we will read in the data from the **California National Parks** data set
+Here we will read in the data from the **California National Parks** and **California Channel Islands** data sets
 ```{r read-data}
 
 ca_np <- read_csv(here("data/ca_np.csv"))
@@ -34,6 +34,8 @@ ca_np <- read_csv(here("data/ca_np.csv"))
 #alternative code 2 -- nere("data","ca_np.csv")
 
 ci_np <- read_xlsx(here("data/ci_np.xlsx"))
+#alternative code -- call read_excel instead
+
 
 ```
 
