--- a/plots-ggplot.Rmd
+++ b/plots-ggplot.Rmd
@@ -112,8 +112,71 @@ gg_base +
 
 ```
 
+### Usings themes in ggplot via gg-themes for overall updates
+
+Use the following recommended themes as examples: 
+ - theme_light
+ - theme_minimal
+ - theme_bw
+
+```{r}
+
+gg_base +
+  geom_area() +
+  theme_linedraw()
+
+```
 
 
+### Visualization in series - Moving on to the **ca_np** dataset 
+
+Will give ggplot the whole set and let it figure out the breakpoints and the rest
+
+```{r}
+
+# a bad graph that looks cool -- not respective of the groupings
+gg_base2 <- ggplot(data = ca_np, aes(x=ca_np$year, y=ca_np$visitors))
+
+gg_base2 + geom_line()
+
+# adding in the group by 
+
+gg_base3 <- ggplot(data = ca_np, aes(x=ca_np$year, y=ca_np$visitors, group= park_name))
+
+gg_base3 + 
+  geom_line( aes(color = park_name) ) + 
+              theme_minimal()
+  
+
+
+
+```
+
+### Faceting via ggplot to break out graphs
+
+```{r}
+my_np_graph <- gg_base2 + 
+  geom_point(aes(color =park_name), show.legend = FALSE) +
+  facet_wrap(~park_name, scales = "free") + 
+  theme_linedraw()
+
+#scales default to fixed (all same), so can jailbreak it with 'free'
+#legend default to show unless show.lengend= FALSE
+
+my_np_graph
+
+
+```
+
+### Export my graph as a .png file
+
+```{r}
+
+ggsave(plot= my_np_graph, here("figures/np_graph1.png"))
+
+
+
+```
 
 
 
