--- a/kelp_filters_joins.Rmd
+++ b/kelp_filters_joins.Rmd
@@ -24,6 +24,8 @@ library(kableExtra) #install.packages("kableExtra")
 #library(skimr) #install.packages("skimr")
 #library(janitor) #install.packages("janitor")
 
+library(ggthemes)#install.packages("ggthemes")
+
 
 ```
 
@@ -303,7 +305,9 @@ make a column graph with x=common_name, y=fish_per_frond
 
 ggplot(dense_fish_kelp, 
        aes(x = common_name,y = fish_per_frond)) +
-         geom_col(aes(fill = common_name))
+         geom_col(aes(fill = common_name)) + 
+          theme_economist(base_size = 10, base_family = "sans",
+horizontal = TRUE, dkpanel = FALSE)
 
 
 ```
